--- a/XamlApp/MainPage.xaml
+++ b/XamlApp/MainPage.xaml
@@ -15,11 +15,11 @@
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:local="using:GameEngine"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  d:DesignHeight="600"
-  d:DesignWidth="800"
+  d:DesignHeight="768"
+  d:DesignWidth="1024"
   mc:Ignorable="d">
 
-  <StackPanel Margin="30,30,30,30">
+  <StackPanel Margin="30,30,30,20">
     <Grid Height="60">
       <TextBlock
         x:Name="textBlock"
@@ -27,7 +27,7 @@
         HorizontalAlignment="Center"
         VerticalAlignment="Top"
         FontSize="25"
-        Text="Hello GameEngine" />
+        Text="Hello XAML" />
       <Button
         Margin="10,10,10,0"
         HorizontalAlignment="Right"
@@ -38,15 +38,17 @@
 
     <SwapChainPanel
       x:Name="swapchainpanel"
-      Width="640"
-      Height="471"
+      Width="800"
+      Height="600"
       Margin="5,5,5,5" />
+    
   </StackPanel>
 
   <Page.BottomAppBar>
     <AppBar x:Name="bottomAppBar" Padding="10,0,10,0">
       <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
         <AppBarButton AutomationProperties.AutomationId="sampleAppBarButton" AutomationProperties.Name="Sample Button" />
+        <AppBarToggleButton Icon="Accept" Label="AppBarToggleButton"/>
       </StackPanel>
     </AppBar>
   </Page.BottomAppBar>
