--- a/XamlApp/MainPage.xaml
+++ b/XamlApp/MainPage.xaml
@@ -15,41 +15,65 @@
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:local="using:GameEngine"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  d:DesignHeight="768"
-  d:DesignWidth="1024"
+  MinWidth="800"
+  MinHeight="600"
   mc:Ignorable="d">
 
-  <StackPanel Margin="30,30,30,20">
-    <Grid Height="60">
+  <Grid Padding="20,20,20,20">
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto" />
+      <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
+
+
+    <Grid
+      Grid.Row="0"
+      Grid.RowSpan="1"
+      Padding="5,5,5,5">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto" />
+        <ColumnDefinition Width="2*" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+
       <TextBlock
         x:Name="textBlock1"
-        Margin="10,10,0,10"
+        Grid.Column="0"
+        Grid.ColumnSpan="2"
         HorizontalAlignment="Left"
-        VerticalAlignment="Top"
-        FontSize="25"
+        VerticalAlignment="Center"
+        FontSize="15"
         Text="Pointer" />
       <TextBlock
         x:Name="textBlock2"
-        Margin="0,10,0,10"
+        Grid.Column="1"
+        Grid.ColumnSpan="2"
         HorizontalAlignment="Center"
-        VerticalAlignment="Top"
-        FontSize="25"
+        VerticalAlignment="Center"
+        FontSize="15"
         Text="Hello XAML" />
       <Button
-        Margin="10,10,10,0"
+        Grid.Column="2"
+        Grid.ColumnSpan="2"
+        Padding="5,5,5,5"
         HorizontalAlignment="Right"
-        VerticalAlignment="Top"
+        VerticalAlignment="Center"
         Click="Button_Click"
-        Content="Button" />
+        Content="Click"
+        FontSize="15" />
     </Grid>
 
-    <SwapChainPanel
-      x:Name="swapchainpanel"
-      Width="800"
-      Height="600"
-      Margin="5,5,5,5" />
 
-  </StackPanel>
+    <Grid Grid.Row="1" Grid.RowSpan="1">
+      <SwapChainPanel
+        x:Name="swapChainPanel"
+        Width="Auto"
+        Height="Auto"
+        MinWidth="760"
+        MinHeight="560" />
+    </Grid>
+  </Grid>
+
 
   <Page.BottomAppBar>
     <AppBar x:Name="bottomAppBar" Padding="10,0,10,0">
