--- a/XamlApp/MainPage.xaml
+++ b/XamlApp/MainPage.xaml
@@ -15,14 +15,12 @@
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:local="using:GameEngine"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  MinWidth="800"
-  MinHeight="600"
   mc:Ignorable="d">
 
-  <Grid Padding="20,20,20,20">
+  <Grid x:Name="gridLayout" Padding="20,20,20,20">
     <Grid.RowDefinitions>
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="*" />
+      <RowDefinition x:Name="gridRowOne" Height="Auto" />
+      <RowDefinition x:Name="gridRowTwo" Height="*" />
     </Grid.RowDefinitions>
 
 
@@ -66,11 +64,7 @@
 
     <Grid Grid.Row="1" Grid.RowSpan="1">
       <SwapChainPanel
-        x:Name="swapChainPanel"
-        Width="Auto"
-        Height="Auto"
-        MinWidth="760"
-        MinHeight="560" />
+        x:Name="swapChainPanel" />
     </Grid>
   </Grid>
 
